# FileSystemWatcher

./: CMakeLists.txt  README.md
application/: CMakeLists.txt  main.cpp
application/qml/: Style.qml  main.qml  qml.qrc
application/qml/components/: Alert.qml  ButtonDelete.qml  ButtonImage.qml  ButtonPrimary.qml  ButtonSecondary.qml  SearchField.qml  TextHeader.qml
doc/: .$Design.drawio.bkp  .$Design.drawio.dtmp  Design.drawio
filesystemwatcherlib/: CMakeLists.txt  filesystemwatcherlib_global.h  fswatcherimpl.cpp  fswatcherimpl.h  fswatcherinterface.cpp  fswatcherinterface.h
filesystemwatcherlib/components/: fsfile.cpp  fsfile.h  fsfolder.cpp  fsfolder.h  fsnode.h
filesystemwatcherlib/entities/: fsevent.cpp  fsevent.h
filesystemwatcherlib/helpers/: fshelper.cpp  fshelper.h
filesystemwatcherlib/managers/: fswatchermanager.cpp  fswatchermanager.h
filesystemwatcherlib/models/: fseventwatchermodel.cpp  fseventwatchermodel.h  fswatchermodel.cpp  fswatchermodel.h
imagedownloader/: CMakeLists.txt  imagedownloader.cpp  imagedownloader.h  imagedownloader_global.h  imagedownloaderimpl.cpp  imagedownloaderimpl.h
